--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+Completed tutorial at: http://safe-caverns-2763.herokuapp.com/   
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
